--- a/staging/staging_autogen.yaml
+++ b/staging/staging_autogen.yaml
@@ -45016,12 +45016,6 @@ rules:
   - update
   - watch
 - apiGroups:
-  - '*'
-  resources:
-  - '*'
-  verbs:
-  - '*'
-- apiGroups:
   - apps
   resources:
   - daemonsets
@@ -45241,9 +45235,17 @@ rules:
   - update
   - watch
 - apiGroups:
+  - events.k8s.io
+  resources:
+  - events
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
   - logging.opni.io
   resources:
-  - loggings
+  - '*'
   verbs:
   - create
   - delete
@@ -45433,6 +45435,19 @@ rules:
   - get
   - patch
   - update
+- apiGroups:
+  - policy
+  resources:
+  - podsecuritypolicies
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - use
+  - watch
 - apiGroups:
   - rbac.authorization.k8s.io
   resources:
