--- a/config/samples/_v1beta1_opnicluster.yaml
+++ b/config/samples/_v1beta1_opnicluster.yaml
@@ -19,7 +19,10 @@ spec:
     gpuController:
       enabled: true
   elastic:
-    version: 1.13.2
+    version: 1.1.0
+    persistence:
+      enabled: true
+      request: 10Gi
   nats:
     authMethod: nkey
   s3:
