Add generic logadapter provider

--- a/config/crd/bases/opni.io_logadapters.yaml
+++ b/config/crd/bases/opni.io_logadapters.yaml
@@ -3052,6 +3052,7 @@ spec:
                 - k3s
                 - rke
                 - rke2
+                - generic
                 type: string
               rke:
                 properties:
