--- a/deploy/manifests/01_rbac.yaml
+++ b/deploy/manifests/01_rbac.yaml
@@ -31,6 +31,39 @@ rules:
 - apiGroups:
   - ""
   resources:
+  - configmaps
+  - events
+  - persistentvolumeclaims
+  - secrets
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - ""
+  resources:
+  - endpoints
+  - namespaces
+  - pods
+  - pods/eviction
+  - serviceaccounts
+  - services
+  - services/finalizers
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - ""
+  resources:
   - endpoints
   - namespaces
   - pods
@@ -40,6 +73,16 @@ rules:
   verbs:
   - create
   - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - ""
+  resources:
+  - nodes
+  verbs:
   - get
   - list
   - patch
@@ -115,6 +158,7 @@ rules:
   verbs:
   - get
   - list
+  - use
   - watch
 - apiGroups:
   - coordination.k8s.io
@@ -287,6 +331,14 @@ rules:
 - apiGroups:
   - monitoring.coreos.com
   resources:
+  - prometheuses
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
+  - monitoring.coreos.com
+  resources:
   - prometheusrule
   - servicemonitors
   verbs:
@@ -346,6 +398,29 @@ rules:
   - get
   - patch
   - update
+- apiGroups:
+  - node.k8s.io
+  resources:
+  - runtimeclasses
+  verbs:
+  - create
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - nvidia.com
+  resources:
+  - '*'
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
 - apiGroups:
   - nvidia.opni.io
   resources:
@@ -551,6 +626,7 @@ rules:
   - list
   - patch
   - update
+  - use
   - watch
 - apiGroups:
   - scheduling.k8s.io
@@ -560,6 +636,8 @@ rules:
   - create
   - get
   - list
+  - patch
+  - update
   - watch
 - apiGroups:
   - security.openshift.io
@@ -572,6 +650,7 @@ rules:
   - list
   - patch
   - update
+  - use
   - watch
 - apiGroups:
   - storage.k8s.io
