--- a/deploy/manifests/00_crds.yaml
+++ b/deploy/manifests/00_crds.yaml
@@ -38735,6 +38735,13 @@ spec:
                         additionalProperties:
                           type: string
                         type: object
+                      prometheus:
+                        properties:
+                          name:
+                            type: string
+                          namespace:
+                            type: string
+                        type: object
                       prometheusEndpoint:
                         type: string
                       tolerations:
@@ -38940,6 +38947,8 @@ spec:
                   version:
                     type: string
                 type: object
+              prometheusRuleNamespace:
+                type: string
               state:
                 type: string
             type: object
