--- a/staging/staging_autogen.yaml
+++ b/staging/staging_autogen.yaml
@@ -34756,6 +34756,13 @@ spec:
                         additionalProperties:
                           type: string
                         type: object
+                      prometheus:
+                        properties:
+                          name:
+                            type: string
+                          namespace:
+                            type: string
+                        type: object
                       prometheusEndpoint:
                         type: string
                       tolerations:
@@ -34961,6 +34968,8 @@ spec:
                   version:
                     type: string
                 type: object
+              prometheusRuleNamespace:
+                type: string
               state:
                 type: string
             type: object
@@ -45297,6 +45306,14 @@ rules:
   - list
   - patch
   - update
+  - watch
+- apiGroups:
+  - monitoring.coreos.com
+  resources:
+  - prometheuses
+  verbs:
+  - get
+  - list
   - watch
 - apiGroups:
   - monitoring.coreos.com
