Update example namespace

--- a/deploy/examples/logAdapters/logAdapter_k3s_openrc.yaml
+++ b/deploy/examples/logAdapters/logAdapter_k3s_openrc.yaml
@@ -7,5 +7,5 @@ spec:
   k3s:
     containerEngine: openrc
   opniCluster:
-    name: opni-cluster
-    namespace: opni-cluster
+    name: cluster
+    namespace: opni
