--- a/deploy/examples/logAdapters/logAdapter_rke.yaml
+++ b/deploy/examples/logAdapters/logAdapter_rke.yaml
@@ -5,5 +5,5 @@ metadata:
 spec:
   provider: rke
   opniCluster:
-    name: opni-cluster
-    namespace: opni-cluster
+    name: cluster
+    namespace: opni
