--- a/deploy/examples/logAdapters/logAdapter_k3s_systemd.yaml
+++ b/deploy/examples/logAdapters/logAdapter_k3s_systemd.yaml
@@ -7,5 +7,5 @@ spec:
   k3s:
     containerEngine: systemd
   opniCluster:
-    name: opni-cluster
-    namespace: opni-cluster
+    name: cluster
+    namespace: opni
