--- a/deploy/examples/logAdapters/logAdapter_rke2.yaml
+++ b/deploy/examples/logAdapters/logAdapter_rke2.yaml
@@ -5,5 +5,5 @@ metadata:
 spec:
   provider: rke2
   opniCluster:
-    name: opni-cluster
-    namespace: opni-cluster
+    name: cluster
+    namespace: opni
