--- a/deploy/kustomization.yaml
+++ b/deploy/kustomization.yaml
@@ -1,6 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: cortex
 resources:
   - deployment.yaml
   - service.yaml
+  - certs.yaml
   - configmap.yaml # see configmap-sample.yaml
