--- a/deploy/manifests/20_cluster.yaml
+++ b/deploy/manifests/20_cluster.yaml
@@ -36,7 +36,7 @@ spec:
       enabled: false # metrics anomaly detection is currently beta
       prometheus:
         name: prometheus-name #The name of the prometheus resource
-        namespace: promethues-namespace #The namespace the prometheus resource is in
+        namespace: prometheus-namespace #The namespace the prometheus resource is in
   elastic:
     version: 1.1.0
   s3:
